2019-02-13  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1222
	
	* README:

	Updated how compiler selection for cmake is done. Add info on how to
	select a specific Fortran compiler. Add info on how to circumvent
	problems with valgrind limitations. Updated info on OpenMP in Clang.
	Based on feedback by Richard.

2019-02-09  Richard Larsson <larsson@mps.mpg.de>

	* arts-2-3-1221
	
	* src/transmissionmatrix.cc:  Switched from 1e-7 to 1e-4
	afterthe tests in the other file show this beig a minimum of
	the four limits of interest.  Should be on order of ~1e-8
	now, the 1e-7 limit resulted in 1% relative error...
	
	* src/test_propagationmatrix.cc: Test of limits.

2019-02-07  Richard Larsson <larsson@mps.mpg.de>

	* arts-2-3-1220
	
	* src/transmissionmatrix.cc:  Now assumes a value
	is zero if it is below 1e-7 for the purposes of
	sin(x)/x, cos(x)/x, cosh(x)/x, and sinh(x)/x
	
	Open question:
	I need something better than this for said type of functions?

2019-02-07  Richard Larsson <larsson@mps.mpg.de>

	* arts-2-3-1219
	
	* src/quantum.cc,h:  Encountered bug in quantum comparitor
	(the upper state was never checked during transition-type ID).
	Decided to redesign comparitor because the overload of < and >
	were too difficult.  Also introduced (InLower) and (InUpper) to
	reduce copy-creation of QuantumIdentifiers when levels needed
	to be identified in a transition.
	
	* src/zeeman.cc:
	* src/m_zeeman.cc:
	* src/m_nlte.cc:
	* src/m_atmopshere.cc:
	Removed use of "<" and ">" for quantum IDs.
	
	* src/linefunctions.cc:
	Removed use of "<" and ">" for quantum IDs.
	Also, named data blocks.
	
	* controlfiles/artscomponents/nlte/testdata/nlte_testdata.xml:
	Updated because it is the only test case affected by the
	quantum.cc,h bug.  Changes are relatively large, and the
	reason is that ARTS previosly computed the wrong line-collisional
	quenching.
	
	* controlfiles/artscomponents/nlte/testRotationalConvergence.arts:
	Added an out-commented WriteXML-statement.
